Initial Git commit

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -190,5 +190,37 @@
     {
         "timestamp": "2025-01-06T14:42:20.671289",
         "path": "data/answers/cbe8a571-1917-489f-b627-6c20d832bc8d/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T18:22:05.072661",
+        "path": "data/answers/50e0cbb6-99b1-48a0-a058-ef3624895cdc/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T18:29:02.033131",
+        "path": "data/answers/6e4a69b7-3730-49c2-856a-e53c7a452098/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T18:31:34.027305",
+        "path": "data/answers/db45fe98-e336-4c35-985c-5e7f3d4c8f28/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T18:41:59.760541",
+        "path": "data/answers/2f4baf3c-fcf0-4d85-91c2-f83d18ece729/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T19:12:59.823348",
+        "path": "data/answers/a042d9d0-634e-4ef8-b303-b45cad6e6af0/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T19:14:32.838848",
+        "path": "data/answers/34fbde6f-133c-48c4-9aad-98da8d485d20/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T19:17:06.577916",
+        "path": "data/answers/62db18df-c2f9-4a41-b5c9-eee989f5b670/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T19:25:46.965876",
+        "path": "data/answers/d95910c0-a8ee-4bff-9ef2-4d522f38995f/step_1/response.json"
     }
 ]
