move dataset files, load from multiple guider files, combine csvs

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -222,5 +222,9 @@
     {
         "timestamp": "2025-01-08T19:25:46.965876",
         "path": "data/answers/d95910c0-a8ee-4bff-9ef2-4d522f38995f/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-08T23:59:15.275242",
+        "path": "data/answers/72ff18ac-c846-4d2b-a6bb-7c468e4a2576/step_1/response.json"
     }
 ]
