combine CSVs should translate the different CSV formats

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -226,5 +226,17 @@
     {
         "timestamp": "2025-01-08T23:59:15.275242",
         "path": "data/answers/72ff18ac-c846-4d2b-a6bb-7c468e4a2576/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T00:24:45.654685",
+        "path": "data/answers/f444e3da-649a-4619-a122-a9f108026092/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T00:26:25.765836",
+        "path": "data/answers/a7d9f514-6842-42e3-9812-e2eb0b1c212a/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T00:27:42.460823",
+        "path": "data/answers/caef4c66-7ab0-407a-ba97-4e93527972ba/step_1/response.json"
     }
 ]
