additional sources to vayechi, remote tags from inputs, use single csv and guider file, move empty list handling to step 4

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -262,5 +262,25 @@
     {
         "timestamp": "2025-01-09T16:38:29.483245",
         "path": "data/answers/81e38287-6d07-4f19-a8fc-aaa5e01e023b/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T16:53:05.887020",
+        "path": "data/answers/4ebfa143-7310-43dc-aba7-8d949674b4cb/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T16:56:22.409853",
+        "path": "data/answers/58470ad1-47c4-4fd9-97c3-88d70b4fd680/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T17:58:27.539092",
+        "path": "data/answers/4593bda9-5a69-4e23-a7ac-5ae61adb816f/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T18:20:36.238581",
+        "path": "data/answers/58af6b2b-7d51-41b6-bfb5-aca26cec7a4d/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-09T20:34:50.170528",
+        "path": "data/answers/d30621d9-018e-40e6-9d09-d557a4aab9d4/step_1/response.json"
     }
 ]
