make only shemot available for now

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -290,5 +290,25 @@
     {
         "timestamp": "2025-01-09T20:57:45.801467",
         "path": "data/answers/0330ab6f-22d5-46e8-a720-ade5f65c7193/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-10T15:46:54.037323",
+        "path": "data/answers/8e4d79ef-3943-4f55-866e-884bc3cdccbf/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-14T00:52:05.059131",
+        "path": "data/answers/7ea87c56-e50c-4a3b-99e0-a26d62752986/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-14T01:20:10.239625",
+        "path": "data/answers/2a05e9f0-1119-4ff8-b75e-036dcb243c6d/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-14T01:35:05.790666",
+        "path": "data/answers/3269bd7f-e251-46bb-8f0e-68cbf666fc1f/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-14T01:39:06.827714",
+        "path": "data/answers/63d88b8c-db98-4fba-bb3c-0203a7b314f3/step_1/response.json"
     }
 ]
