User checkpoint: Update dataset with corrected Hebrew text, translations, and keywords for Divrey Yoel entries.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -310,5 +310,33 @@
     {
         "timestamp": "2025-01-14T01:39:06.827714",
         "path": "data/answers/63d88b8c-db98-4fba-bb3c-0203a7b314f3/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T11:43:04.375242",
+        "path": "data/answers/944a7721-2e15-4944-aa04-3a59be987ed9/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T11:44:22.621868",
+        "path": "data/answers/089ae566-32d1-4bb3-8d11-37cd94687d6b/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T11:51:35.425804",
+        "path": "data/answers/f18ced8c-6d51-4db3-be0e-e05cb3e9b9e8/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T11:57:22.589104",
+        "path": "data/answers/e5da0b2c-fdee-437f-9ffd-e1308cb3a2e5/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T19:20:55.818595",
+        "path": "data/answers/9bd97466-cc39-4520-99a0-2208e9013381/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T19:43:35.380563",
+        "path": "data/answers/cb51e398-f00f-4856-a8bb-8fdba9cdf1ba/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T20:29:14.040481",
+        "path": "data/answers/c6c2d033-0e59-4acb-8183-597b38501550/step_1/response.json"
     }
 ]
