User checkpoint: Add AI avatar to UI and new response data to manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -338,5 +338,9 @@
     {
         "timestamp": "2025-01-15T20:29:14.040481",
         "path": "data/answers/c6c2d033-0e59-4acb-8183-597b38501550/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T20:54:20.146469",
+        "path": "data/answers/cf36db77-6ff9-44d5-81a7-e4389d8f3708/step_1/response.json"
     }
 ]
