User checkpoint: Update UI styling and add three new conversation logs to the data.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -342,5 +342,13 @@
     {
         "timestamp": "2025-01-15T20:54:20.146469",
         "path": "data/answers/cf36db77-6ff9-44d5-81a7-e4389d8f3708/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T21:12:10.328693",
+        "path": "data/answers/11a1a168-0b8c-484d-867f-50ec504660cc/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T22:46:11.514307",
+        "path": "data/answers/08fe0686-8280-445c-bf21-f42d516551a2/step_1/response.json"
     }
 ]
