User checkpoint: Add two new response.json files to manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -350,5 +350,9 @@
     {
         "timestamp": "2025-01-15T22:46:11.514307",
         "path": "data/answers/08fe0686-8280-445c-bf21-f42d516551a2/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T22:49:41.520499",
+        "path": "data/answers/c6640b51-61e4-4deb-a157-71f05d43d5e2/step_1/response.json"
     }
 ]
