User checkpoint: Align AI bubble and typing indicator to the right; add new response data.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -354,5 +354,9 @@
     {
         "timestamp": "2025-01-15T22:49:41.520499",
         "path": "data/answers/c6640b51-61e4-4deb-a157-71f05d43d5e2/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T22:52:13.942778",
+        "path": "data/answers/59af30ea-d49c-4142-acf0-378a376e9b3f/step_1/response.json"
     }
 ]
