--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-openai>=1.0.0
+openai>=1.59.7
 rich>=13.0.0
 pandas>=2.0.0
 numpy>=1.24.0
 python-dotenv>=1.0.0
 flask-cors
 flask
-anthropic
-litellm>=1.57.3
+anthropic>=0.43.0
+litellm>=1.58.2
 instructor>=1.7.2
 beautifulsoup4>=4.12.3
 html5lib>=1.1.0
 python-docx>=1.1.2
+pymongo[srv]>=4.10.1
