--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "python-template"
+name = "chassidic_ai"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = [{name ="Roman Baron", email="roman.baron@gmail.com>"}]
 requires-python = ">=3.11"
 dependencies = [
     "openai>=1.58.1",
