--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ instructor>=1.7.2
 beautifulsoup4>=4.12.3
 html5lib>=1.1.0
 python-docx>=1.1.2
-pymongo[srv]>=4.10.1
+motor[gssapi,ocsp,snappy,srv,zstd,encryption]>=3.6.1
