User checkpoint: Add three new response.json files to the manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -358,5 +358,13 @@
     {
         "timestamp": "2025-01-15T22:52:13.942778",
         "path": "data/answers/59af30ea-d49c-4142-acf0-378a376e9b3f/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-15T22:55:44.100959",
+        "path": "data/answers/b9d7780c-ce6f-4a21-b9ef-851631f95d4c/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T04:35:43.053597",
+        "path": "data/answers/7b63138b-51a0-4fbc-b26a-9e97635df856/step_1/response.json"
     }
 ]
