User checkpoint: Update manifest with new response and refactor CSS styling to use Tailwind-like utility classes.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -366,5 +366,9 @@
     {
         "timestamp": "2025-01-16T04:35:43.053597",
         "path": "data/answers/7b63138b-51a0-4fbc-b26a-9e97635df856/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T20:51:26.068798",
+        "path": "data/answers/9f25669c-70df-4918-a91a-150d65ba1d06/step_1/response.json"
     }
 ]
