User checkpoint: Add two new response.json files to the manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -370,5 +370,9 @@
     {
         "timestamp": "2025-01-16T20:51:26.068798",
         "path": "data/answers/9f25669c-70df-4918-a91a-150d65ba1d06/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T20:55:50.914976",
+        "path": "data/answers/6abc872c-933c-4009-bb23-bb7abb388aa9/step_1/response.json"
     }
 ]
