User checkpoint: Add two new response.json entries to manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -374,5 +374,9 @@
     {
         "timestamp": "2025-01-16T20:55:50.914976",
         "path": "data/answers/6abc872c-933c-4009-bb23-bb7abb388aa9/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:14:28.336470",
+        "path": "data/answers/4852c910-06c9-4e1d-b903-cc764db69559/step_1/response.json"
     }
 ]
