--- a/data/manifest.json
+++ b/data/manifest.json
@@ -378,5 +378,9 @@
     {
         "timestamp": "2025-01-16T21:14:28.336470",
         "path": "data/answers/4852c910-06c9-4e1d-b903-cc764db69559/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:16:23.507610",
+        "path": "data/answers/6fdceeff-a31c-4dae-809d-258328958c12/step_1/response.json"
     }
 ]
