User checkpoint: Add two new response.json entries to manifest.json

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -382,5 +382,9 @@
     {
         "timestamp": "2025-01-16T21:16:23.507610",
         "path": "data/answers/6fdceeff-a31c-4dae-809d-258328958c12/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:19:27.562824",
+        "path": "data/answers/542654cb-52e7-4232-9937-72995e9b7c94/step_1/response.json"
     }
 ]
