User checkpoint: Add two new response.json entries to manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -386,5 +386,9 @@
     {
         "timestamp": "2025-01-16T21:19:27.562824",
         "path": "data/answers/542654cb-52e7-4232-9937-72995e9b7c94/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:28:18.835610",
+        "path": "data/answers/f6550038-eda3-4a18-b265-f1d802cce6e7/step_1/response.json"
     }
 ]
