User checkpoint: Add two new response.json entries to the manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -390,5 +390,9 @@
     {
         "timestamp": "2025-01-16T21:28:18.835610",
         "path": "data/answers/f6550038-eda3-4a18-b265-f1d802cce6e7/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:31:18.770517",
+        "path": "data/answers/a17d2dac-deec-4fd4-a1c1-e5d4b1503072/step_1/response.json"
     }
 ]
