User checkpoint: Add two new response.json entries to manifest.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -394,5 +394,9 @@
     {
         "timestamp": "2025-01-16T21:31:18.770517",
         "path": "data/answers/a17d2dac-deec-4fd4-a1c1-e5d4b1503072/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:32:56.126548",
+        "path": "data/answers/82e02495-df47-49a7-9cfc-8350e3497142/step_1/response.json"
     }
 ]
