User checkpoint: Add three new response.json files to data/answers.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -398,5 +398,17 @@
     {
         "timestamp": "2025-01-16T21:32:56.126548",
         "path": "data/answers/82e02495-df47-49a7-9cfc-8350e3497142/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:38:49.932659",
+        "path": "data/answers/bda63008-a15e-4a00-a12c-a0298baa6441/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:41:20.355915",
+        "path": "data/answers/11b61a95-31c0-4987-9e4d-0d53675ff760/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:41:25.491346",
+        "path": "data/answers/3902daa1-e4d3-44df-969d-8b78d16a16fb/step_1/response.json"
     }
 ]
