User checkpoint: Add five new answers to the dataset and update the question input placeholder to remove the ellipsis.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -410,5 +410,25 @@
     {
         "timestamp": "2025-01-16T21:41:25.491346",
         "path": "data/answers/3902daa1-e4d3-44df-969d-8b78d16a16fb/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T21:52:48.025526",
+        "path": "data/answers/11ded18e-46b3-4d6c-b054-1f2f8edeb8d4/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-16T23:42:56.785801",
+        "path": "data/answers/9c9365d7-b2b2-4ac0-a761-8a51b1a3d27d/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-17T08:11:10.496448",
+        "path": "data/answers/4b072dd4-a9dc-446b-9104-773ce1fde244/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-17T08:16:39.815205",
+        "path": "data/answers/f687446d-cd71-4501-8177-85023140e1e0/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-17T09:10:42.637199",
+        "path": "data/answers/2375858f-f2c3-493e-b63f-540f6ac5f44c/step_1/response.json"
     }
 ]
