--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ beautifulsoup4>=4.12.3
 html5lib>=1.1.0
 python-docx>=1.1.2
 motor[gssapi,ocsp,snappy,srv,zstd,encryption]>=3.6.1
+fastapi>=0.115.6
+uvicorn[standard]>=0.34.0
+click>=8.1.8
