--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,12 @@ motor = {version = ">=3.6.1", extras = ["gssapi", "ocsp", "snappy", "srv", "zstd
 fastapi = ">=0.115.6"
 hypercorn = ">=0.17.3"
 docx =  ">=0.2.4"
+faiss-cpu = ">=1.9.0"
+transformers = ">=4.48.1"
 
 
 [tool.poetry.group.dev.dependencies]
 poetry-plugin-shell = ">=0.1.0"
 pytest = ">=8.3.4"
+ragas = ">=0.2.11"
 
