--- a/data/manifest.json
+++ b/data/manifest.json
@@ -430,5 +430,21 @@
     {
         "timestamp": "2025-01-17T09:10:42.637199",
         "path": "data/answers/2375858f-f2c3-493e-b63f-540f6ac5f44c/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-17T12:08:43.783007",
+        "path": "data/answers/acaa2577-4a6d-4e19-b7ce-cc786a924aab/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-17T14:15:16.813176",
+        "path": "data/answers/b8745acb-62aa-48c8-8743-b2e11ef9bddd/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-28T20:58:11.238510",
+        "path": "data/answers/870f844b-510e-4374-9103-753f6d481bfc/step_1/response.json"
+    },
+    {
+        "timestamp": "2025-01-28T21:00:59.748879",
+        "path": "data/answers/1c3c32c5-44f9-4454-a592-b9710df8f3cb/step_1/response.json"
     }
 ]
